<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="version_value">4.4.0.1</string>
    <string name="app_id">******************</string>
    <string name="ad_unit_id">******************</string>
    <string name="app_name">KK Reminder</string>
    <string name="app_promotion">KK Reminder  -  never miss a task with persistent notifications</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.hideaki.kk_reminder</string>
    <string name="backup_progress_bar_title">Backup Data</string>
    <string name="restore_progress_bar_title">Restore Data</string>
    <string name="set_all_notify_sound_progress_bar_title">Set notification sound for all tasks</string>
    <string name="set_all_vibration_progress_bar_title">Set vibration for all tasks</string>
    <string name="copy_from_old_version_progress_bar_title">Database Update</string>
    <string name="update_info">Update Info</string>
    <string name="align_top">Go to top of the list</string>
    <string name="past">Past</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="within_a_week">Within a week</string>
    <string name="in_a_week_or_later">In a week or later</string>
    <string name="minus5m">-5m</string>
    <string name="plus5m">+5m</string>
    <string name="minus1h">-1h</string>
    <string name="plus1h">+1h</string>
    <string name="minus1d">-1d</string>
    <string name="plus1d">+1d</string>
    <string name="control_time_hour">h</string>
    <string name="control_time_minute">m</string>
    <string name="edit">Edit</string>
    <string name="notes">Notes</string>
    <string name="alarm">Alarm</string>
    <string name="above_picker1_default">9:00</string>
    <string name="above_picker2_default">12:00</string>
    <string name="above_picker3_default">15:00</string>
    <string name="above_picker4_default">18:00</string>
    <string name="below_picker1">Now</string>
    <string name="below_picker2">+3 Hours</string>
    <string name="below_picker3">+1 Week</string>
    <string name="below_picker4">Calendar</string>
    <string name="title">Title</string>
    <string name="default_detail">New task</string>
    <string name="detail_hint">Enter a title</string>
    <string name="schedule_task">Task period</string>
    <string name="due_date">Due date</string>
    <string name="tag">Tag</string>
    <string name="notify_option">Notification options</string>
    <string name="interval">Notification repeat and frequency</string>
    <string name="repeat_option">Repeat options</string>
    <string name="repeat_day_unit">Repeat (per day)</string>
    <plurals name="day">
        <item quantity="one">1d</item>
        <item quantity="other">%1$dd</item>
    </plurals>
    <plurals name="week">
        <item quantity="one">1w</item>
        <item quantity="other">%1$dw</item>
    </plurals>
    <plurals name="month">
        <item quantity="one">1m</item>
        <item quantity="other">%1$dm</item>
    </plurals>
    <plurals name="year">
        <item quantity="one">1y</item>
        <item quantity="other">%1$dy</item>
    </plurals>
    <plurals name="per_day">
        <item quantity="one">Every day</item>
        <item quantity="other">Every %1$d days</item>
    </plurals>
    <plurals name="per_week">
        <item quantity="one">Every week</item>
        <item quantity="other">Every %1$d weeks</item>
    </plurals>
    <plurals name="per_month">
        <item quantity="one">Every month</item>
        <item quantity="other">Every %1$d months</item>
    </plurals>
    <plurals name="per_year">
        <item quantity="one">Every year</item>
        <item quantity="other">Every %1$d years</item>
    </plurals>
    <string name="time_limit">Time Limit</string>
    <string name="selection">Selection</string>
    <string name="repeat_minute_unit">Repeat (per minute)</string>
    <string name="repeat_minute_interval">Repeat Interval</string>
    <string name="repeat_minute_count">Repeat count</string>
    <plurals name="repeat_minute_count_format">
        <item quantity="one">Repeat every %1$sx 1 time after you finish this task</item>
        <item quantity="other">Repeat every %1$sx %2$d times after you finish this task</item>
    </plurals>
    <string name="repeat_minute_duration">Repeat duration</string>
    <string name="repeat_minute_duration_format">Repeat every %1$sfor %2$safter you finish this task</string>
    <string name="repeat_minute_illegal_dialog">The repeat interval exceeds the repeat duration.\nPlease set an interval shorter than the duration.</string>
    <string name="alarm_option">Alarm options</string>
    <string name="pick_alarm">Pick an alarm</string>
    <string name="permission_external_alarm_rationale_title">External Storage Access Permission</string>
    <string name="permission_external_alarm_rationale_message">External Storage Access Permission is needed if you want to pick an alarm from external storage</string>
    <string name="permission_external_alarm_denied">External Storage Access Permission was denied. Setting default alarm sound</string>
    <string name="permission_exact_alarm_rationale_title">Exact Alarm Permission</string>
    <string name="permission_exact_alarm_rationale_message">After update to Android 12, you have to accept a special permission in order to set an exact time alarm. This app currently doesn\'t have the permission, so you have to give the permission to it if you want to use it normally.</string>
    <string name="permission_exact_alarm_denied">Exact Alarm Permission was denied. All task notifications will be stopped</string>
    <string name="permission_post_notification_rationale_title">Notification Permission</string>
    <string name="permission_post_notification_rationale_message">After update to Android 13, you have to accept notification permission in order to receive notification from app. This app currently doesn\'t have the permission, so you have to give the permission to it if you want to use it normally.</string>
    <string name="permission_post_notification_denied">Post Notification Permission was denied. All task notifications will be stopped</string>
    <string name="permit">Permit</string>
    <string name="deny">Deny</string>
    <string name="default_snooze">Default</string>
    <string name="snooze">snooze</string>
    <string name="snooze_time">Snooze Time</string>
    <string name="more_advanced_snooze">More...</string>
    <string name="manually_snooze_description">If you set both the hour and minute to 0, it will be treated as 24 hours</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="three_hours">3 hours</string>
    <string name="ten_hours">10 hours</string>
    <string name="one_day">1 day</string>
    <string-array name="snooze_list">
        <item>@string/fifteen_minutes</item>
        <item>@string/thirty_minutes</item>
        <item>@string/one_hour</item>
        <item>@string/three_hours</item>
        <item>@string/ten_hours</item>
        <item>@string/one_day</item>
        <item>@string/custom</item>
    </string-array>
    <string name="sort_notes">Sort notes</string>
    <string name="edit_mode">Edit notes</string>
    <string name="checklist_mode">Checklist mode</string>
    <string name="notes_hint">Enter notes</string>
    <string name="done_edit">Done editing</string>
    <string name="delete_checked_items">Delete checked items</string>
    <string name="unselect_all_items">Uncheck all items</string>
    <string name="clear_notes">Clear notes</string>
    <string name="clear_notes_message">Do you really want to clear notes? If you clear them, you cannot restore them</string>
    <string name="delete_checked_items_message">Do you really want to delete checked items? If you delete them, you cannot restore them</string>
    <string name="settings">Settings</string>
    <string name="default_settings">Default settings</string>
    <string name="default_detail_text_size">Card text size</string>
    <string name="default_text_size_summary">This size will be applied to the detail section of the card</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="default_text_size_model_summary">Display example</string>
    <string name="default_new_task">New task</string>
    <string name="default_new_task_summary">You can configure the default settings for new tasks in advance</string>
    <string name="set_all">Set to all tasks</string>
    <string name="set_all_summary">Set the vibration or notification sound for all tasks at once</string>
    <string name="default_manually_snooze">Manual snooze time</string>
    <string name="default_control_time">Time step</string>
    <string name="default_vibration">Vibration pattern</string>
    <string name="theme">Theme</string>
    <string name="after_theme_set_message">After you set the theme, the app restarts automatically</string>
    <string name="backup">Backup</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="about_this_app">About this app</string>
    <string name="none">None</string>
    <string name="search_task">Search task</string>
    <string name="tag_search">Search by tag</string>
    <string name="notify_default">Default</string>
    <string name="notify_every_minute">Every minute</string>
    <string name="notify_every_five_minutes">Every 5 minutes</string>
    <string name="notify_every_fifteen_minutes">Every 15 minutes</string>
    <string name="notify_every_thirty_minutes">Every 30 minutes</string>
    <string name="notify_every_hour">Every hour</string>
    <string name="notify_every_day">Every day</string>
    <string name="description_for_notify_custom">If you set the count to -1, the system will notify you indefinitely; if you set it to 0, it will notify you only once. If you set both the hour and minute to 0, it will be treated as 24 hours</string>
    <string name="custom">Custom</string>
    <string name="non_repeat">No repeat</string>
    <string name="on_days">Notify on the day of the week you choose</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="on_months">Notify on the month you choose</string>
    <string name="january">Jan.</string>
    <string name="february">Feb.</string>
    <string name="march">Mar.</string>
    <string name="april">Apr.</string>
    <string name="may">May</string>
    <string name="june">Jun.</string>
    <string name="july">Jul.</string>
    <string name="august">Aug.</string>
    <string name="september">Sep.</string>
    <string name="october">Oct.</string>
    <string name="november">Nov.</string>
    <string name="december">Dec.</string>
    <string name="add_task">Add a new task</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="review">Review this app on Google Play</string>
    <string name="request">Requests</string>
    <string name="cab_delete">Delete task</string>
    <string name="cab_move_task">Move tasks to another list</string>
    <string name="cab_clone">Clone task</string>
    <string name="cab_share">Share task</string>
    <string name="pick_primary_color">Pick a base color</string>
    <string name="pick_secondary_color">Pick an accent color</string>
    <string name="pick_color">Pick a color</string>
    <string name="sort">Sort task</string>
</resources>