<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.hideaki.kk_reminder.MyPreferenceCategory
        android:key="title"
        android:title="@string/title"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:key="detail"
            android:dialogLayout="@layout/preference_edittext_custom_dialog"/>
    </com.hideaki.kk_reminder.MyPreferenceCategory>

    <com.hideaki.kk_reminder.MyPreferenceCategory
        android:title="@string/schedule_task"
        android:key="schedule"
        app:iconSpaceReserved="false">

        <PreferenceScreen
            android:key="date_picker"/>

        <PreferenceScreen
            android:key="time_picker"/>

    </com.hideaki.kk_reminder.MyPreferenceCategory>

    <com.hideaki.kk_reminder.MyPreferenceCategory
        android:key="color"
        android:title="@string/pick_color"
        app:iconSpaceReserved="false">

<!--        <PreferenceScreen-->
<!--            android:key="primary_color"-->
<!--            android:title="@string/pick_primary_color"/>-->

        <PreferenceScreen
            android:key="secondary_color"
            android:title="@string/pick_secondary_color"/>

    </com.hideaki.kk_reminder.MyPreferenceCategory>

    <com.hideaki.kk_reminder.MyPreferenceCategory
        android:key="tag_category"
        android:title="@string/tag"
        app:iconSpaceReserved="false">

        <PreferenceScreen
            android:key="tag"/>
    </com.hideaki.kk_reminder.MyPreferenceCategory>

    <com.hideaki.kk_reminder.MyPreferenceCategory
        android:key="notification_category"
        android:title="@string/notify_option"
        app:iconSpaceReserved="false">
        <PreferenceScreen
            android:key="interval"
            android:title="@string/interval" />

        <com.hideaki.kk_reminder.TwoLineTitlePreference
            android:key="pick_alarm"
            android:title="@string/pick_alarm"/>

        <PreferenceScreen
            android:title="@string/default_vibration"
            android:key="vibration"/>
    </com.hideaki.kk_reminder.MyPreferenceCategory>

    <com.hideaki.kk_reminder.MyPreferenceCategory
        android:title="@string/repeat_option"
        app:iconSpaceReserved="false">
        <PreferenceScreen
            android:key="repeat_day_unit"
            android:title="@string/repeat_day_unit" />
        <PreferenceScreen
            android:key="repeat_minute_unit"
            android:title="@string/repeat_minute_unit"
            android:summary="@string/none"/>
    </com.hideaki.kk_reminder.MyPreferenceCategory>

    <com.hideaki.kk_reminder.MyPreferenceCategory
        android:key="notes_category"
        android:title="@string/notes"
        app:iconSpaceReserved="false">
        <com.hideaki.kk_reminder.NotesPreference
            android:key="notes"/>
    </com.hideaki.kk_reminder.MyPreferenceCategory>

</PreferenceScreen>