<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.hideaki.kk_reminder.MyPreferenceCategory
        android:title="@string/help"
        app:iconSpaceReserved="false">

        <PreferenceScreen
            android:key="contact"
            android:title="@string/contact"/>
    </com.hideaki.kk_reminder.MyPreferenceCategory>

    <com.hideaki.kk_reminder.MyPreferenceCategory
        android:title="@string/feedback"
        app:iconSpaceReserved="false">

        <PreferenceScreen
            android:key="feedback"
            android:title="@string/review"/>

        <PreferenceScreen
            android:key="request"
            android:title="@string/request"/>
    </com.hideaki.kk_reminder.MyPreferenceCategory>

</PreferenceScreen>