<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/cab_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/move_task_between_list"
        android:icon="@drawable/ic_move_task_between_list_24dp"
        android:title="@string/cab_move_task"
        app:showAsAction="always" />
    <item
        android:id="@+id/clone"
        android:icon="@drawable/ic_clone_24dp"
        android:title="@string/cab_clone"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/cab_share"
        app:showAsAction="always" />
</menu>